--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ install:
   - pip install codecov
   - pip install requests-mock
 script:
-  - pytest
+  - pytest --cov=./
 after_success:
   - codecov
